--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my sixth repo</title>
 </head>
-<body>
+<body> <h1>hi how are you</h1>
+    <h2>hope you are well</h2>
     
 </body>
 </html>
